removed family name placeholder from family preview

--- a/public/partials/pfpreview_1.html
+++ b/public/partials/pfpreview_1.html
@@ -16,7 +16,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
         <div class="input-container">
             <a class="pencil" href="javascript:void(0);"></a>
             <!-- family's name -->
-            <input type="text" name="" id="" placeholder="FAMILY NAME" value="THE TOKOUSBALIDES" />
+<!--             <input type="text" name="" id="" placeholder="FAMILY NAME" value="THE TOKOUSBALIDES" /> -->
         </div>
         <!-- help button -->
         <a href="javascript:void(0);" class="q-circle">?</a>
