removed unnecessary image placeholder from book preview

--- a/public/partials/pfpreview_2.html
+++ b/public/partials/pfpreview_2.html
@@ -52,7 +52,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
 
                 <!-- THIS WAS HIDDEN THROUGH CSS AS IT WAS MAKING THE PAGE TOO LARGE -->
                 <!--Placeholder, required for responsive layout (height). Please do not remove-->
-                <img src="/img/book_page1.png" alt="" class="flipbook-placeholder" />
+<!--                 <img src="/img/book_page1.png" alt="" class="flipbook-placeholder" /> -->
                 <!--Placeholder, required for responsive layout (height). Please do not remove-->
             </div>
             <div class="flipbook-arrows">
