Revert "Tweaked positioning on slider to work more intuitively"
This reverts commit 2b401c98abe710b22d19448b79e67cc0f97dd6c7.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1559,7 +1559,7 @@ header .user-avatar img {
     .character-wrapper .tab-wrapper #tabs ul {
       width: 100% !important; }
       .character-wrapper .tab-wrapper #tabs ul li {
-        min-width: 75px; }
+        float: left; }
     .character-wrapper .tab-wrapper #tabs .tab-pane-style {
       width: 100%; }
     .character-wrapper .tab-wrapper #tabs .tab-content {
