made the color slider slideout

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -936,6 +936,9 @@ input[type="radio"]:checked + label.color-thumb {
     .tab-btn-save > a{
         width:57%;
     }
+    .color-thumbs {
+        display: none;
+    }
 }
 
 @media (max-width: 630px){
