reduced the footer size, commented out the unused div and button

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -939,6 +939,9 @@ input[type="radio"]:checked + label.color-thumb {
     .color-thumbs {
         display: none;
     }
+    .steps-menu {
+        display: none !important;
+    }
 }
 
 @media (max-width: 630px){
