--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -213,7 +213,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
     <section id="bottomPartWrapper">
         <div class="container">
             <!--added div-->
-            <div class="w-col-md-4"><a href="javascript:void(0);" class="footer-btn back-btn">Back</a></div><!--added div-->
+<!--             <div class="w-col-md-4"><a href="javascript:void(0);" class="footer-btn back-btn">Back</a></div><!--added div-->
             <!-- steps menu -->
             <ul class="steps-menu w-col-md-4">
                 <!--added class-->
