--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1570,7 +1570,7 @@ header .user-avatar img {
         border-right: 1px solid;
         float: left; }
       .character-wrapper .tab-wrapper #tabs .tab-content .img_wrapper {
-        width: 50vw;
+        width: 75vw;
         float: left; }
         .character-wrapper .tab-wrapper #tabs .tab-content .img_wrapper .slick-slide {
           margin-right: 60px; }
@@ -2338,7 +2338,16 @@ input[type="radio"]:checked + label.color-thumb {
   .color-thumbs {
     display: none; }
   .steps-menu {
-    display: none !important; } }
+    display: none !important; }
+  #tabs .tab-pane-style label img {
+    max-height: 60px;
+    max-width: 60px; }
+  .body-part-icons {
+    margin-right: 20px; }
+  .img_wrapper {
+    width: 253px !important;
+    height: 70px !important;
+    overflow: hidden !important; } }
 
 @media (max-width: 630px) {
   #bottomPartWrapper .w-col-md-4 {
