--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -942,6 +942,23 @@ input[type="radio"]:checked + label.color-thumb {
     .steps-menu {
         display: none !important;
     }
+    #tabs .tab-pane-style label img {
+        max-height: 60px;
+        max-width: 60px;
+    }
+
+    .body-part-icons {
+        margin-right: 20px;
+    }
+
+    .img_wrapper {
+        width: 253px !important;
+        height: 70px !important;
+        overflow: hidden !important;        
+    }
+
+
+
 }
 
 @media (max-width: 630px){
