Re-enabled slick. Added several triggers at the top of main.js. Also added a watcher for the ng-repeat loop, also ng-click directive for color tabs and property tabs. Also windows resize trigger. Also initial window size detection The final version of the slick slider was fixed by enabling, disabling, and re-enabling slick as the tabs are activated.
Seems hacky may need to rework at later date!

This branch is ready to be merged into slick-fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2839,3 +2839,10 @@ input[type="radio"]:checked + label.color-thumb {
 @media (min-width: 700px) {
   #tabs .body-part-label {
     width: initial !important; } }
+
+#property-placeholder-label {
+  visibility: hidden; }
+
+@media (max-width: 600px) {
+  #property-placeholder-label {
+    display: none; } }
