--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -146,7 +146,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
 
         <!-- MGS: The slider is tricky. Each li will actually contain several layered images, the transparency as well as each of the body parts overlaying one another (position-absolute), you can style them as if they were one image -->
         <!-- start slider --><!-- in order to stylize the images with absolute position we need to add different class for each element, for example .eyes-img, .body-img, .hair-img etc -->
-        <section  class="mobile_hide" id="slider">
+        <section  class="" id="slider">
             <div class="header-info">
 <!--                 <a class="pencil" href="javascript:void(0);"></a> -->
                 <!-- family's name -->
@@ -214,7 +214,6 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
     <!-- bottom part -> menu & buttons -->
     <section id="bottomPartWrapper">
         <div class="container">
-            <!--added div-->
 <!--             <div class="w-col-md-4"><a href="javascript:void(0);" class="footer-btn back-btn">Back</a></div><!--added div-->
             <!-- steps menu -->
             <ul class="steps-menu w-col-md-4">
