--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -51,18 +51,22 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
             <section id="tabs">
                 <!-- tabs : this structure might change depending on the tab component used-->
                 <!-- tab menu -->
-                <ul>
-                    <li class="active"><a target="_self" href="#nameGender" data-toggle="tab">Name and Gender</a></li>
+                <div class="property-scroller-outer">
+                    <div class="property-scroller-inner">
+                        <ul>
+                            <li class="active"><a target="_self" href="#nameGender" data-toggle="tab">Name and Gender</a></li>
 
-                    <!-- MGS: the tab li elements (or whatever element they will get changed to will dynamically repeat based on the information retrieved from the database). I have commented out all but the first LI to demonstrate that -->
-                    <li ng-repeat="property in main.schema"><a target="_self" ng-href="{{'#' + property.image_type}}" data-toggle="tab">{{property.image_type_label}}</a></li>
-                    <!--<li class="active"><a data-toggle="tab" href="#nameGender">NAME & GENDER</a></li>
-                    <li><a href="#skin">SKIN</a></li>
-                    <li><a href="#hair">HAIR</a></li>
-                    <li><a href="#eyes">EYES</a></li>
-                    <li><a href="#nose">NOSE</a></li>
-                    <li><a href="#mouth">MOUTH</a></li> -->
-                </ul>
+                            <!-- MGS: the tab li elements (or whatever element they will get changed to will dynamically repeat based on the information retrieved from the database). I have commented out all but the first LI to demonstrate that -->
+                            <li ng-repeat="property in main.schema"><a target="_self" ng-href="{{'#' + property.image_type}}" data-toggle="tab">{{property.image_type_label}}</a></li>
+                            <!--<li class="active"><a data-toggle="tab" href="#nameGender">NAME & GENDER</a></li>
+                            <li><a href="#skin">SKIN</a></li>
+                            <li><a href="#hair">HAIR</a></li>
+                            <li><a href="#eyes">EYES</a></li>
+                            <li><a href="#nose">NOSE</a></li>
+                            <li><a href="#mouth">MOUTH</a></li> -->
+                        </ul>
+                    </div>
+                </div>
                 <!-- MGS: the tabs will dynamically repeat as their data is pulled from database, similar to tab headings (see comment at line 31). The first tab - Name ang Gender is special and does not repeat, because every avatar will have a name and gender, but the rest will be dynamic. -->
                 <!-- tab content -->
                 <div class="tab-content">
