made icon slider work on mobile WITHOUT SLICK SLIDER git add .

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -313,7 +313,7 @@ padding-left:20px;
     display:none;
 }
 #tabs .tab-pane-style label{
-    width: 45%;
+    width: 142px;
     //height:142px;
     height: 130px;
     background-color:#fff;
