--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1573,6 +1573,10 @@ header .user-avatar img {
         float: left; }
     .character-wrapper .tab-wrapper #tabs .tab-pane-style {
       width: 100%; }
+      .character-wrapper .tab-wrapper #tabs .tab-pane-style label {
+        height: 75px;
+        width: 75px;
+        margin-right: 20px !important; }
     .character-wrapper .tab-wrapper #tabs .tab-content {
       width: 100% !important;
       float: left; }
@@ -1580,8 +1584,19 @@ header .user-avatar img {
         width: 70px;
         border-right: 1px solid;
         float: left; }
+      .character-wrapper .tab-wrapper #tabs .tab-content .icon-scroller-outer {
+        display: block;
+        position: relative;
+        width: 480px;
+        height: 83px;
+        overflow: hidden; }
+        .character-wrapper .tab-wrapper #tabs .tab-content .icon-scroller-outer .icon-scroller-inner {
+          position: absolute;
+          width: 480px;
+          overflow-x: scroll;
+          overflow-y: hidden; }
       .character-wrapper .tab-wrapper #tabs .tab-content .img_wrapper {
-        width: 50vw;
+        width: 1000px;
         float: left; }
         .character-wrapper .tab-wrapper #tabs .tab-content .img_wrapper .slick-slide {
           margin-right: 60px; }
@@ -1825,7 +1840,7 @@ a:hover, a:focus {
   display: none; }
 
 #tabs .tab-pane-style label {
-  width: 45%;
+  width: 142px;
   height: 130px;
   background-color: #fff;
   cursor: pointer;
