--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -116,13 +116,16 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                                 {{JSON.stringify(main.colorCodes)}}
                             </div>
                         </div>
-
-                        <div class="img_wrapper">
-                            <div ng-repeat="value in property.values | filter:{color_code: main.colorCodes[property.image_type]}">
-                                <input id="radio_btn_{{value.image_id}}" type="radio" value="{{value.image_id}}" name="radio_{{property.image_type}}" ng-model="main.currentAvatar.images[$parent.$index]"></input>
-                                <label for="radio_btn_{{value.image_id}}" class="body-part-label">
-                                    <img height="" ng-src="{{value.icon_location}}">
-                                </label>
+                        <div class="icon-scroller-outer">
+                            <div class="icon-scroller-inner">
+                                <div class="img_wrapper">
+                                    <div ng-repeat="value in property.values | filter:{color_code: main.colorCodes[property.image_type]}">
+                                        <input id="radio_btn_{{value.image_id}}" type="radio" value="{{value.image_id}}" name="radio_{{property.image_type}}" ng-model="main.currentAvatar.images[$parent.$index]"></input>
+                                        <label for="radio_btn_{{value.image_id}}" class="body-part-label">
+                                            <img height="" ng-src="{{value.icon_location}}">
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
