--- a/public/scss/kario_css.scss
+++ b/public/scss/kario_css.scss
@@ -71,12 +71,32 @@
 						width: 220%; 
 						li { float: left; }
 					}
-					.tab-pane-style { width: 100%; }
+					.tab-pane-style {
+						width: 100%; 
+						label {
+							height: 75px;
+							width: 75px;
+							margin-right: 20px !important;
+						}
+					}
 					.tab-content { 
 						width: 100% !important; float: left; 
 						.color-thumbs { width: 70px; border-right: 1px solid; float: left; }
+						.icon-scroller-outer {
+							display: block;
+    					position: relative;
+    					width: 480px;
+    					height: 83px;
+    					overflow: hidden;
+							.icon-scroller-inner {
+								position: absolute;
+	    					width: 480px;
+	    					overflow-x: scroll;
+	    					overflow-y: hidden;
+							}
+						}
 						.img_wrapper { 
-							width: 50vw; float: left; 
+							width: 1000px; float: left; 
 							.slick-slide { margin-right: 60px; }
 						}
 						.ng-scope { float: left;  }
