--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1554,7 +1554,6 @@ header .user-avatar img {
     float: left;
     width: 80px; }
   .character-wrapper .tab-wrapper #tabs {
-    height: 290px;
     overflow: visible; }
     .character-wrapper .tab-wrapper #tabs .property-scroller-outer {
       display: block;
@@ -1580,6 +1579,8 @@ header .user-avatar img {
     .character-wrapper .tab-wrapper #tabs .tab-content {
       width: 100% !important;
       float: left; }
+      .character-wrapper .tab-wrapper #tabs .tab-content .property-label {
+        display: none; }
       .character-wrapper .tab-wrapper #tabs .tab-content .color-thumbs {
         width: 70px;
         border-right: 1px solid;
@@ -1587,12 +1588,13 @@ header .user-avatar img {
       .character-wrapper .tab-wrapper #tabs .tab-content .icon-scroller-outer {
         display: block;
         position: relative;
-        width: 480px;
+        width: 310px;
         height: 83px;
-        overflow: hidden; }
+        overflow: hidden;
+        float: left; }
         .character-wrapper .tab-wrapper #tabs .tab-content .icon-scroller-outer .icon-scroller-inner {
           position: absolute;
-          width: 480px;
+          width: 310px;
           overflow-x: scroll;
           overflow-y: hidden; }
       .character-wrapper .tab-wrapper #tabs .tab-content .img_wrapper {
