removed the skip to preview link on footer

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -243,7 +243,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
             <div class="w-col-md-4">
                 <!--added div-->
                 <a ng-href="/previewfamily" target="_self" ng-click="main.saveChanges()" class="footer-btn">My characters are ready</a>
-                <a href="/previewbook" class="skip-btn">SKIP TO PREVIEW THE BOOK</a>
+<!--                 <a href="/previewbook" class="skip-btn">SKIP TO PREVIEW THE BOOK</a> -->
             </div>
         </div>
     </section><!-- end id:bottomPartWrapper -->
