--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1539,9 +1539,6 @@ header .user-avatar img {
     display: none; } }
 
 @media (max-width: 749px) {
-  #nameGender {
-    z-index: 1000;
-    height: 372px !important; }
   .mobile_hide {
     visibility: hidden; }
   .mobile_display {
@@ -1602,13 +1599,13 @@ header .user-avatar img {
         position: absolute;
         top: 0px;
         left: 90px;
-        width: 400px;
+        width: 480px;
         height: 83px;
         overflow: hidden;
         float: left; }
         .character-wrapper .tab-wrapper #tabs .tab-content .icon-scroller-outer .icon-scroller-inner {
           position: absolute;
-          width: 400px;
+          width: 480px;
           overflow-x: scroll;
           overflow-y: hidden; }
       .character-wrapper .tab-wrapper #tabs .tab-content .img_wrapper {
@@ -1619,13 +1616,6 @@ header .user-avatar img {
       .character-wrapper .tab-wrapper #tabs .tab-content .ng-scope {
         float: left; }
   #slider {
-    position: relative;
-    top: -700px;
-    left: -100px;
-    -webkit-transform: scale(0.8);
-        -ms-transform: scale(0.8);
-            transform: scale(0.8);
-    z-index: 1000px;
     margin-top: 130px !important;
     pointer-events: none; }
     #slider img:first-child {
@@ -1642,7 +1632,7 @@ body {
   height: 100%;
   left: 0px;
   top: 0px;
-  z-index: 2000;
+  z-index: 550;
   background-color: lime; }
 
 .loading-message {
@@ -2401,6 +2391,7 @@ input[type="radio"]:checked + label.color-thumb {
     clear: both;
     height: 0; }
   #bottomPartWrapper .w-col-md-4:last-child {
+    width: 100%;
     float: none;
     overflow: hidden; }
   .steps-menu {
