--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -151,7 +151,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
 
         <!-- MGS: The slider is tricky. Each li will actually contain several layered images, the transparency as well as each of the body parts overlaying one another (position-absolute), you can style them as if they were one image -->
         <!-- start slider --><!-- in order to stylize the images with absolute position we need to add different class for each element, for example .eyes-img, .body-img, .hair-img etc -->
-        <section  class="" id="slider">
+        <section  class="mobile_hide" id="slider">
             <div class="header-info">
 <!--                 <a class="pencil" href="javascript:void(0);"></a> -->
                 <!-- family's name -->
