--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1538,12 +1538,43 @@ header .user-avatar img {
   .desk_hide {
     display: none; } }
 
+#nameGender-mobile {
+  display: none; }
+
 @media (max-width: 749px) {
+  .name-gender-tab-control {
+    display: none; }
+  .salutation-wrapper {
+    display: none !important; }
+  #nameGender-mobile {
+    display: block;
+    margin-top: 293px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    /* padding-left: 50px; */
+    /* float: left; */
+    margin-left: 79px;
+    width: 400px; }
+    #nameGender-mobile input, #nameGender-mobile select {
+      padding-top: 0 !important;
+      padding-bottom: 0 !important;
+      opacity: 1 !important; }
+    #nameGender-mobile select {
+      height: 27px !important;
+      line-height: 27px !important;
+      width: 130px !important;
+      background-color: white !important; }
+  .form-section-mobile {
+    float: left;
+    width: 45%; }
+  .birthday-form-section {
+    width: 100% !important; }
   #nameGender {
     z-index: 150;
     position: relative;
     opacity: 1;
-    height: 100% !important; }
+    height: 100% !important;
+    display: none; }
   .transparent-input-field {
     position: relative;
     z-index: 100;
@@ -1600,6 +1631,8 @@ header .user-avatar img {
         width: 75px;
         margin-right: 20px !important; }
     .character-wrapper .tab-wrapper #tabs .tab-content {
+      height: 550px !important;
+      overflow: hidden;
       width: 100% !important;
       float: left;
       background-color: #ECEADD; }
@@ -1616,13 +1649,13 @@ header .user-avatar img {
         position: absolute;
         top: 0px;
         left: 90px;
-        width: 480px;
+        width: 100%;
         height: 83px;
         overflow: hidden;
         float: left; }
         .character-wrapper .tab-wrapper #tabs .tab-content .icon-scroller-outer .icon-scroller-inner {
           position: absolute;
-          width: 480px;
+          width: 100%;
           overflow-x: scroll;
           overflow-y: hidden; }
       .character-wrapper .tab-wrapper #tabs .tab-content .img_wrapper {
@@ -2886,3 +2919,6 @@ input[type="radio"]:checked + label.color-thumb {
 
 #tabs input.input-error {
   border: 2px solid red; }
+
+.icon-scroller-inner .img_wrapper label {
+  background-color: transparent !important; }
