--- a/public/scss/kario_css.scss
+++ b/public/scss/kario_css.scss
@@ -41,14 +41,56 @@
 		.desk_hide { display: none; }
 	}
 
+	#nameGender-mobile {
+		display: none;
+	}
+
 
 	//Character Tab Styles
 	@media (max-width: 749px){ 
+
+	.name-gender-tab-control {
+		display: none;
+	}	
+  .salutation-wrapper {
+  	display: none !important;
+  }
+		#nameGender-mobile {
+			display: block;
+			margin-top: 293px;
+    box-sizing: border-box;
+    /* padding-left: 50px; */
+    /* float: left; */
+    margin-left: 79px;
+    width: 400px;
+      input, select {
+      	    padding-top: 0 !important;
+    				padding-bottom: 0 !important;
+    				opacity: 1 !important;
+      }
+      select {
+      	height: 27px !important;
+      	line-height: 27px !important;
+      	width: 130px !important;
+      	background-color: white !important;
+      }
+		}
+
+		.form-section-mobile {
+			float: left;
+			width: 45%;
+		}
+
+		.birthday-form-section {
+			width: 100% !important;
+		}
+
 		#nameGender {
 			z-index: 150;
 			position: relative;
 			opacity: 1;
 			height: 100% !important;
+			display: none;
 		}
 		.transparent-input-field {
 			position: relative;
@@ -76,7 +118,7 @@
 		.character-wrapper {
 
 			.tab-wrapper {
-			
+				
 				#tabs {
 					overflow: visible;
 					.property-scroller-outer {
@@ -109,6 +151,8 @@
 						}
 					}
 					.tab-content { 
+						height: 550px !important;
+						overflow: hidden;
 						width: 100% !important; float: left; 
 						background-color: #ECEADD;
 						.property-label {
@@ -127,13 +171,13 @@
     					position: absolute;
     					top: 0px;
     					left: 90px;
-    					width: 480px;
+    					width: 100%;
     					height: 83px;
     					overflow: hidden;
     					float: left;
 							.icon-scroller-inner {
 								position: absolute;
-	    					width: 480px;
+	    					width: 100%;
 	    					overflow-x: scroll;
 	    					overflow-y: hidden;
 							}
